--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,10 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "test.test.test.test"
+        //   applicationId "test.test.test.test"
+        applicationId "mag.spike.tabs"
         minSdkVersion 15
+        multiDexEnabled true
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -20,11 +22,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+        mavenCentral()
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+
+
+    implementation 'com.google.android.gms:play-services-ads:11.0.2'
+    implementation 'com.google.android.gms:play-services-basement:11.0.2'
+    implementation 'com.google.android.gms:play-services-location:11.0.2'
+
+
+    implementation 'com.android.support:multidex:1.0.1'
+
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
