--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,9 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 26
     defaultConfig {
-        //   applicationId "mag.spike.tabs"
          applicationId "test.test.test.test"
 
         minSdkVersion 15
-        multiDexEnabled true
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -40,13 +38,14 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
 
+    implementation "io.reactivex.rxjava2:rxjava:2.1.12"
+
 
     implementation 'com.google.android.gms:play-services-ads:11.0.2'
     implementation 'com.google.android.gms:play-services-basement:11.0.2'
     implementation 'com.google.android.gms:play-services-location:11.0.2'
 
 
-    implementation 'com.android.support:multidex:1.0.1'
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
